--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,13 +17,13 @@
   ],
   "icons": [
     {
-      "src": "/images/logo.png?v=3",
+      "src": "/images/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/images/logo.png?v=3",
+      "src": "/images/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
